# ai_assistant

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: Dockerfile  app.py  core.py
bot/handlers/: __init__.py  calendar.py  q_and_a.py  start.py  uncertainty.py  voice_to_text.py
bot/handlers/calendar/: calendar_util.py  create_manual_task.py  create_task.py  show_manual_task.py  start.py  voice_operations.py
bot/keyboards/: calendar.py  general.py  voice_to_text.py
bot/texts/: calendar.py  instructions.py  prompts.py
bot/utils/: database_api.py  large_lang_model_api.py  scheduler.py  voice_to_text_api.py
database/: Dockerfile  app.py  create_db.sql  init_db.py  table_models.py
database/configs/: cfg.yaml
database_api/: Dockerfile  app.py
database_init/: Dockerfile  init_db.py  log_config.py  table_models.py
database_init/configs/: cfg.yaml
database_init/test_files/: task_categories_dict.csv  task_statuses_dict.csv  tasks.csv  users.csv
large_lang_model/: Dockerfile  app.py
large_lang_model_api/: Dockerfile  infer.py  log_config.py
test_files/: task_categories_dict.csv  task_statuses_dict.csv  task_statuses_dict_202505080105.csv  tasks_202505080106.csv  users.csv
voice_to_text/: Dockerfile  app.py  infer.py  main.py
voice_to_text/model/: infer.py  speech_recognition_model.py
voice_to_text_api/: Dockerfile  app.py  infer.py  load_models_at_start.py
